--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -15,7 +15,7 @@
     </div>
     <button type="submit">Save post</button>
     <button type="button" class="delete-post-btn">Delete post</button>
-  </form>
+  </form
 </article>
 
 <form class="comment-form">
